tests/compilefail41.out
[1mtests/compilefail41.pas:12:10: [0m[1m[91merror:[0m Error D.49: Cannot assign value '7' of type integer to type myrange
    12 | 	q := 7;